--- a/LocationSDKApp/app/src/main/res/layout/activity_splash.xml
+++ b/LocationSDKApp/app/src/main/res/layout/activity_splash.xml
@@ -4,10 +4,8 @@
     android:id="@+id/activity_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_gradiant"
+  android:padding="8dp"
     >
 
     <android.support.v4.widget.NestedScrollView
@@ -16,13 +14,16 @@
         android:layout_above="@+id/btnNext">
     <TextView
         android:id="@+id/tvData"
-        android:layout_width="wrap_content"
+
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="15dp"
+
+        android:textColor="#111111"
+        android:textSize="14dp"
         android:text="Hello World!" />
     </android.support.v4.widget.NestedScrollView>
     <Button
+        android:visibility="gone"
         android:text="NEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
